--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+
 body {
     background: rgb(151, 190, 241);
+}
+
+h1 {
+    text-align: center;
+    color: rgb(50, 91, 167);
+    font-family: 'Finger Paint', cursive;
+    font-size: 75px;
+    margin: 0;
+}
+img {
+    max-width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 4px solid rgb(50, 91, 167);
+    border-radius: 25px;
+}
+
+h2 {
+    text-align: center;
+    color: rgb(50, 91, 167);
+    font-family: 'Annie Use Your Telescope', cursive;
+    margin-top: 0;
 }
